fix(alert): Fix Ui issue in the text-area A case where the user can resize a textarea to be so small the placeholder gets cut off A case where the user can resize horizontally and then the textarea is partially out of view in the alert.

--- a/core/src/components/alert/alert.scss
+++ b/core/src/components/alert/alert.scss
@@ -184,3 +184,9 @@
 .alert-checkbox-inner {
   box-sizing: border-box;
 }
+
+textarea.alert-input {
+  min-height: $alert-input-min-height;
+
+  resize: vertical;
+}
